kio-clipboard: merged revisions 89:106 from branch 0.2 into trunk

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(KDE4 REQUIRED)
+find_package(KDE4 "4.5" REQUIRED)
 include(KDE4Defaults)
 include_directories(${KDE4_INCLUDES} ${QT_INCLUDES})
 add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
@@ -9,6 +9,7 @@ set(shared_SRCS        kio_protocol.cpp
                        clipboards/clipboard_frontend.cpp
                        clipboards/clipboard_backend.cpp
                        node/node_wrapper.cpp
+                       node/node_list.cpp
                        clients/dbus/dbus_client.cpp)
 set(kio_klipper_SRCS   kio_klipper.cpp
                        kio_klipper_protocol.cpp)
@@ -20,8 +21,8 @@ set(CMAKE_CXX_FLAGS "-fexceptions")
 kde4_add_plugin(kio_clipboard ${kio_clipboard_SRCS} ${shared_SRCS} ${klipper_SRCS})
 kde4_add_plugin(kio_klipper   ${kio_klipper_SRCS}   ${shared_SRCS} ${klipper_SRCS})
 
-target_link_libraries(kio_clipboard ${KDE4_KIO_LIBS})
-target_link_libraries(kio_klipper   ${KDE4_KIO_LIBS})
+target_link_libraries(kio_clipboard ${KDE4_KIO_LIBS} qjson)
+target_link_libraries(kio_klipper   ${KDE4_KIO_LIBS} qjson)
 
 install(TARGETS kio_clipboard DESTINATION ${PLUGIN_INSTALL_DIR})
 install(TARGETS kio_klipper DESTINATION   ${PLUGIN_INSTALL_DIR})
